[gd_scene load_steps=2 format=3 uid="uid://c0qf8mryh7aer"]

[ext_resource type="Script" uid="uid://di82p3g4wxc3j" path="res://Scripts/pause_menu.gd" id="1_kuani"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kuani")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 102.0
color = Color(0.70023346, 0.31396824, 0.37500608, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitToMenu" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="QuitToDesktop" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="pressed" from="ColorRect/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
